<resources>
    <!-- 타이틀바 텍스트   -->
    <string name="app_name">Emotion_mapFile</string>
    <string name="recent_emotion">최근 내 상태</string>
    <string name="plus_emotion">+</string>
    <string name="comment_list">주변 상황</string>
    <string name="expand">더 보기</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="dash">-</string>
    <string name="comment">%s | %s</string>
    <string name="myCity">%s</string>
    <string name="hint">이유를 입력해주세요.</string>
    <string name="logout">로그아웃</string>
    <string name="Github">Github</string>
    <string name="ask">문의하기</string>

    <string name="angry">빡침</string>
    <string name="happy">기쁨</string>
    <string name="people">%s 명</string>
    <string name="temperature">%s ℃</string>
    <string name="mainSignUpButtonText">회원이 아니신가요?</string>
    <string name="mainSignInButtonText">로그인</string>
    <string name="initial_ems">0 / 50</string>
    <string name="ems">%s / 50</string>
    <string name="add_comment_title">감정 추가</string>
    <string name="add_comment_switchLabel">나는 지금</string>
    <string name="add_comment_submit">등록</string>
    <string name="signUpTitle">회원가입</string>
    <string name="signUpNameInputHint">이름</string>
    <string name="signUpEmailInputHint">이메일 (aa@bb.cc)</string>
    <string name="signUpPasswordInputHint">비밀번호 (6자리 이상)</string>
    <string name="signUpPasswordRepeatInputHint">비밀번호 확인</string>

    <string name="signInTitle">로그인</string>
    <string name="signInPasswordInputHint">비밀번호 (6자리 이상)</string>
    <string name="signInEmailInputHint">이메일</string>
    <string name="signInSubmitButtonText">로그인</string>
    <!--지역별 통계-->
    <string name="menu3">지역별 통계</string>
    <string name="menu3.1">지역</string>
    <string name="menu3.2">빡침</string>
    <string name="menu3.3">기쁨</string>
    <string name="menu3.4">총합</string>

    <!---카카오-->
    <string name="kakao_app_key">0a44c75e17c694fcd835f7fa64e90654</string>
    <string name="splashText">빡칠지도</string>
</resources>