<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/signInTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:gravity="center"
        android:text="@string/signInTitle"
        android:textColor="@color/white"
        android:textSize="48sp" />

    <EditText
        android:id="@+id/signInEmailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="130dp"
        android:layout_marginRight="60dp"
        android:ems="10"
        android:hint="@string/signInEmailInputHint"
        android:inputType="textWebEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInTitle" />

    <EditText
        android:id="@+id/signInPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="60dp"
        android:ems="10"
        android:hint="@string/signInPasswordInputHint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInEmailInput" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_marginLeft="65dp"
            android:text="@string/mainSignUpButtonText"
            android:textSize="10sp"
            android:gravity="top"
            android:background="#00ff0000"/>

    <CheckBox
        android:id="@+id/check_autoLogin"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginLeft="250dp"
        android:text="자동로그인" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/mainSignInButtonText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Sign in with"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.891" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.576"
            tools:layout_editor_absoluteX="0dp">

            <ImageButton
                android:id="@+id/googleSignInButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:adjustViewBounds="true"
                android:background="#00ff0000"
                android:scaleType="fitCenter"
                android:src="@drawable/google" />

            <ImageButton
                android:id="@+id/kakaoSignInButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="35dp"
                android:adjustViewBounds="true"
                android:background="#00ff0000"
                android:scaleType="fitCenter"
                android:src="@drawable/kakao" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>